# openweather

./: Cargo.toml  README.md  SPEC.md
src/: main.rs  weather.rs  weather_api.rs
